--- a/templates/order.html
+++ b/templates/order.html
@@ -1,44 +1,27 @@
 {% load static %}
-<!DOCTYPE html>
+{% load custom_tags %}
 <html lang="en">
     <link rel="stylesheet" href="{% static 'orders.css' %}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout</title>
-    <style>
-       
-    </style>
-</head>
 <body>
-
+    {% show_messages %}
     <h1>Order</h1>
     <div style>
-        <div>
-            <h6>heading</h6>
-            <div>
-                <p></p>
-            </div>
-        </div>
-        <div>
-            <h6>heading</h6>
-            <div>
-                <p></p>
-            </div>
-        </div>
-
-        </div>
+    <table>
+        <thead>
             <tr>
                 <th>Product</th>
                 <th>Price</th>
             </tr>
-        
+        </thead>
+    <tbody>
     {% for item in cart_items %}
             <tr>
                 <td>{{ item.product.name }}</td>
                 <td>{{ item.product.price }}</td>
             </tr>
             {% endfor %}
+        </tbody>
+    </table>
     <p><strong>Total Price:</strong> {{ total_price }}</p>
     <p><strong>Delivery Charges:</strong> {{ delivery_charges }}</p>
     <form method="post">
