--- a/templates/register.html
+++ b/templates/register.html
@@ -1,13 +1,11 @@
 {% load static %}
-<!DOCTYPE html>
+{% load custom_tags %}
 <html lang="en">
     <link rel="stylesheet" href="{% static 'auth.css' %}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register Page</title>
-</head>
+
 <body>
+
+    {% show_messages %}
     <div class="user-register-wrap">
     <div class="container">
         <h2>Register</h2>
