--- a/static/CSS/cart.css
+++ b/static/CSS/cart.css
@@ -47,9 +47,9 @@ p {
 a {
     display: block;
     width: 200px;
-    margin: 20px auto;
+    margin: 20px ;
     padding: 12px;
-    text-align: center;
+    text-align: center; 
     text-decoration: none;
     background-color: #007bff;
     color: #fff;
@@ -67,3 +67,4 @@ button{
     display: flex;
     justify-content: center;
 }
+
